--- a/format.css
+++ b/format.css
@@ -1,12 +1,11 @@
 body{
-    display: inline;
     padding: 0;
     margin: 0;
     font-family: 'Reenie Beanie', cursive;
     background-image: linear-gradient(rgba(255, 255, 255, 0.432), rgb(255, 255, 255)),url("img/kelly-jean-GOR_eBd_2bk-unsplash.jpg");
     background-attachment: fixed;
     background-position: center;
-    background-size: cover;
+    background-size: auto;
 }
 header{
     display: flex;
