--- a/format.css
+++ b/format.css
@@ -6,6 +6,7 @@ body{
     background-attachment: fixed;
     background-position: center;
     background-size: auto;
+    position: relative;
 }
 header{
     display: flex;
