--- a/format.css
+++ b/format.css
@@ -2,9 +2,17 @@ body{
     padding: 0;
     margin: 0;
     font-family: 'Reenie Beanie', cursive;
-    
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 20% 30% 41% 4% ;
+    grid-template-areas: 
+    "header"
+    "isi"
+    "gambar"
+    "peta";
 }
 header{
+    grid-area: header;
     display: flex;
     background-image: linear-gradient(rgba(0, 0, 0, 0.356), rgba(255, 255, 255, 0)),url("img/east-meets-dress-uFwIsgrL6rk-unsplash.jpg");
     background-size: 100%;
@@ -17,6 +25,16 @@ header{
     padding: 0px;  
     position: relative;
    
+}
+
+isi{
+    grid-area: isi;
+}
+gambar{
+    grid-area: gambar;
+}
+peta{
+    grid-area: peta;
 }
 .isititle{
     display: flex;
@@ -156,6 +174,7 @@ h2{
   header{
     background-size: 120%;
     height: 768px;
+    background-attachment: scroll;
   
 }
 }
@@ -166,24 +185,24 @@ h2{
   header{
     background-size: 200%;
     height: 1024px;
-  
+    background-attachment: scroll;
 }
 h1{
   font-size: 90px;
 }
 .gbr2{
-    
+    background-attachment: scroll;
     background-size: cover;
     height: 400px;
 }
 .gbr3{
-    
+    background-attachment: scroll;
     background-size: cover;
     height: 500px;
 }
 .gbr4{
     background-size: cover;
-    background-attachment: fixed; 
+    background-attachment: scroll; 
     background-repeat: no-repeat;
     background-position:center;
     margin: 5px;
@@ -199,6 +218,8 @@ header{
     background-size:cover;
     background-position:center;
     height: 736px;
+    background-attachment: scroll;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.356), rgb(255, 255, 255)),url("img/east-meets-dress-uFwIsgrL6rk-unsplash.jpg"); 
 }
 .isititle{
     margin: 20px;
@@ -214,21 +235,24 @@ header{
     background-position:center;
     width: auto;
     height: 500px;
+    background-attachment: scroll;
 }
 .gbr2{
     
     background-size: 180%;
     background-position: top;
     height: 180px;
+    background-attachment: scroll;
 }
 .gbr3{
     background-size: 170%;
     background-position: top;
     height: 180px;
+    background-attachment: scroll;
 }
 .gbr4{
     background-size: cover;
-    background-attachment: fixed; 
+    background-attachment: scroll; 
     background-repeat: no-repeat;
     background-position:center;
     margin: 5px;
